# sevenrealms-bot

./: .env.prod  .gitignore  Dockerfile  Dockerfile-gha  Dockerfile.gha  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
sevenfield_bot/plugins/about/: __init__.py  config.py
sevenfield_bot/plugins/alinlp_emotion/: __init__.py  alinlp.py
sevenfield_bot/plugins/blacklist/: __init__.py
sevenfield_bot/plugins/db/: __init__.py  config.py
sevenfield_bot/plugins/github/: __init__.py  config.py  ping.py  webhook.py
sevenfield_bot/plugins/global_config/: __init__.py  config.py
sevenfield_bot/plugins/lifecycle/: __init__.py
sevenfield_bot/plugins/message_backup/: __init__.py  config.py  database.py
sevenfield_bot/plugins/message_logging/: __init__.py  config.py  count.py  scheduler.py
sevenfield_bot/plugins/ping/: __init__.py
sevenfield_bot/plugins/portal_adapter/: __init__.py  config.py  fastapi.py  middleware.py  user.py
sevenfield_bot/plugins/recall/: __init__.py
sevenrealms_bot/plugins/about/: __init__.py  config.py
sevenrealms_bot/plugins/alias/: __init__.py  model.py
sevenrealms_bot/plugins/alias/migrations/: 942aaf44b53e_.py
sevenrealms_bot/plugins/alinlp_emotion/: __init__.py  config.py
sevenrealms_bot/plugins/all_members/: __init__.py  config.py  types.py
sevenrealms_bot/plugins/blacklist/: __init__.py
sevenrealms_bot/plugins/db/: __init__.py  config.py
sevenrealms_bot/plugins/fortune/: __init__.py  model.py
sevenrealms_bot/plugins/fortune/migrations/: 81417d4ddc6e_.py  b8680951f738_.py
sevenrealms_bot/plugins/github/: __init__.py  config.py  ping.py  webhook.py
sevenrealms_bot/plugins/group_blacklist/: __init__.py  config.py
sevenrealms_bot/plugins/lifecycle/: __init__.py
sevenrealms_bot/plugins/member_group/: __init__.py  model.py
sevenrealms_bot/plugins/member_group/migrations/: e824c1308a98_.py
sevenrealms_bot/plugins/message_backup/: __init__.py  alioss.py  database.py
sevenrealms_bot/plugins/message_count/: __init__.py
sevenrealms_bot/plugins/message_logging/: __init__.py  backup.py  blacklist.py  config.py  count.py  file.py  model.py  recall.py  scheduler.py
sevenrealms_bot/plugins/message_logging/migrations/: b3a5075f6b99_.py
sevenrealms_bot/plugins/ping/: __init__.py
sevenrealms_bot/plugins/portal_adapter/: middleware.py  user.py
sevenrealms_bot/plugins/recall/: __init__.py
sevenrealms_bot/plugins/redis/: __init__.py  config.py
srbot/: server.py
srbot/plugins/: firebase.py
