[tool.poetry]
name = "srbot"
version = "0.1.0"
description = ""
authors = ["Zeithrold <zeithrold@gmail.com>"]
readme = "README.md"
packages = [{ include = "srbot" }]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
nonebot-adapter-onebot = "^2.4.3"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
nonebot2 = "^2.3.1"
nb-cli = "^1.4.1"
pyyaml = "^6.0.1"
firebase-admin = "^6.5.0"

[tool.nonebot]
plugins = []
plugin_dirs = ["plugins"]

[tool.poetry.group.dev.dependencies]
# autopep8 = "^2.0.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
